--- a/solutions.css
+++ b/solutions.css
@@ -98,3 +98,85 @@
     transform: rotate(290deg);
   }
 }
+
+.ex-12-button:hover .ex-12-top-white{
+  animation: rotation-3 2s;
+}
+
+.ex-12-button:hover .ex-12-bottom-white{
+  animation: rotation-4 2s;
+}
+
+@keyframes rotation-3 {
+  0% {left: 10%;}
+  50% {left: calc(100% - 60px);}
+  100% {left: 10%;}
+}
+
+@keyframes rotation-4 {
+  0% {right: 10%;}
+  50% {right: calc(100% - 60px);}
+  100% {right: 10%;}
+}
+
+.ex-13-button:hover .ex-13-top-white{
+  animation: rotation-5 2s linear;
+}
+
+@keyframes rotation-5 {
+  0% {
+    top: -10px;
+    left: 10%;
+  }
+  20% {
+    top: -10px;
+    left: 100%;
+  }
+  40% {
+    top: 100%;
+    left: 100%;
+  }
+  60% {
+    left: 0;
+    top: 100%;
+  }
+  80% {
+    top: 0;
+    left: -15px;
+  }
+  100%{
+    left: 10%;
+    top: -10px;
+  }
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+  animation: rotation-6 2s linear;
+}
+
+@keyframes rotation-6 {
+  0% {
+    bottom: -10px;
+  right: 20%;
+}
+  20% {
+    bottom: -10px;
+    right: calc(100% - 40px);
+  }
+  40% {
+    bottom: 100%;
+      right: calc(100% - 40px);
+    }
+  60% {
+    bottom: 100%;
+    right: 0;
+  }
+  80% {
+    bottom: 0;
+    right: -15px;
+  }
+  100%{
+    bottom: -10px;
+    right: 20%;
+  }
+}
